[profile.release]
lto = true
debug = 1

[profile.dev]
debug = 1

# Never waste time optimizing `syn` & Co

[profile.dev.build-override]
opt-level = 0

[workspace]
# TODO: add other as they are fixed
members=[ "src/devtool", "src/gen-api-client", "src/cli", "src/client",
    "src/dist-files-generator", "src/dist-builder"]
