[package]
name = "cli"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend-api = {path = "../frontend-api"}
structopt = "0.2.18"
base64 = "0.10.1"
slog = "2.5.2"
serde_json = "1.0.40"
graphql_client = "0.8.0"
serde = "1.0.98"
slog-envlogger = "2.1.0"
slog-stdlog = "4.0.0"
slog-term = "2.4.1"
slog-scope = "4.1.2"
