[package]
name = "db"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
postgres = "0.15.2"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07"] }
serde = "1.0.98"
serde_derive = "1.0.98"
uuid = { version = "0.7.4", features = ["serde"] }
