[package]
name = "db"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
postgres = "0.15.2"
diesel = { version = "1.4.2", features = ["postgres", "extras", "uuid", "uuidv07"] }
serde = { version = "1.0.98", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde"] }
snafu = "0.4.3"
derive = "1.0.0"
snafu-derive = "0.4.3"
r2d2 = "0.8.5"
