[package]
name = "db"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
postgres = "0.15.2"
diesel = { version = "1.4.2", features = ["postgres", "extras", "uuid", "uuidv07"] }
serde = { version = "1.0.99", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
snafu = "0.4.4"
derive = "1.0.0"
snafu-derive = "0.4.4"
r2d2 = "0.8.5"
