[package]
name = "devtool"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
console = "0.7.5"
reqwest = "0.9.17"
percent-encoding = "1.0.1"
serde_json = "1.0.39"
fs_extra = "1.1.0"
rouille = "3.0.0"
filetime = "0.2.6"
tar = "0.4.26"
