[package]
name = "devtool"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
console = "0.7.7"
reqwest = "0.9.19"
serde_json = "1.0.40"
fs_extra = "1.1.0"
filetime = "0.2.6"
tar = "0.4.26"
serde = { version = "1.0.98", features = ["derive"] }
log = "0.4.8"
env_logger = "0.6.2"
ignore = "0.4.10"
