[package]
name = "frontend-api"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
serde = "1.0.92"
serde_derive = "1.0.92"
ordered-float = "1.0.2"
try_from = "0.3.2"
serde_json = "1.0.39"
reqwest = "0.9.18"
snafu = "0.4.1"
slog = "2.4.1"

[build-dependencies]
syn = { version = "0.15.36", features = ["full", "extra-traits"] }
quote = "0.6.12"
proc-macro2 = "0.4.30"
