[package]
name = "frontend"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"
default-run = "frontend"

[dependencies]
cfg = {path = "../cfg"}
frontend-api = {path = "../frontend-api"}
serde_json = "1.0.40"
serde = {version = "1.0.97", features = ["derive"]}
failure = "0.1.5"
failure_derive = "0.1.5"
rand = "0.7.0"
db = {path = "../db"}
diesel = { version = "1.4.2", features = ["postgres", "extras"] }
rocket = "0.4.2"
r2d2 = "0.8.5"
dotenv = "0.14.1"
rand_chacha = "0.2.0"
sha3 = "0.8.2"
digest = "0.8.1"
branca = "0.8.0"
base64 = "0.10.1"
constant_time_eq = "0.1.3"
libc = "0.2.60"
slog = { version = "2.5.0", features = ["max_level_trace"] }
envy = "0.4.0"
slog-term = "2.4.1"
slog-async = "2.3.0"
acl = {git = "https://github.com/mikailbag/acl", rev = "051c87c"}
bitflags = "1.1.0"
juniper = "0.13.0"
juniper_rocket = "0.4.0"
juniper-eager-loading = "0.2.0"


[dependencies.rocket_contrib]
version = "0.4.2"
features = ["json"]
