[package]
name = "frontend"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"
default-run = "frontend"

[dependencies]
frontend-engine = {path = "../frontend-engine"}
rocket = "0.4.2"
slog = "2.5.2"
slog-async = "2.3.0"
cfg = {path = "../cfg"}
db = {path = "../db"}
dotenv = "0.14.1"
slog-term = "2.4.1"
