[package]
name = "invoker"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
minion = {path = "../minion"}
cfg = {path ="../cfg"}
pretty_env_logger = "0.3.1"
futures = "0.1.28"
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0.99"
serde_json = "1.0.40"
frontend-api = {path = "../frontend-api"}
db = {path = "../db"}
dotenv = "0.14.1"
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-term = "2.4.1"
slog-async = "2.3.0"
ctrlc = { version = "3.1.3", features = ["termination"] }
diesel = { version = "1.4.2", features = ["postgres", "extras"] }
aho-corasick = "0.7.6"
invoker-api = {path = "../invoker-api"}
cfg-if = "0.1.9"
pom = {path = "../pom"}
libc = "0.2.62"
nix = "0.15.0"
snafu = "0.4.4"
memchr = "2.2.1"
strum = "0.15.0"
strum_macros = "0.15.0"
chrono = "0.4.7"
color-backtrace = { version = "0.2.2", optional = true }
tempfile = "3.1.0"
fs_extra = "1.1.0"
snafu-derive = "0.4.4"
atty = "0.2.13"
base64 = "0.10.1"

[features]
beautiful_backtrace = ["color-backtrace"]
default = ["beautiful_backtrace"]
