[package]
name = "minion-cli"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[build-dependencies]
chrono = { version = "0.4.6", features = ["serde"] }

[dependencies]
minion = {path = "../minion"}
structopt = "0.2.17"
whoami = "0.5.2"
human-panic = { version = "1.0.1", optional = true }
cfg-if = "0.1.9"
chrono = { version = "0.4.6", features = ["serde"] }

[features]
human_panic = ["human-panic"]
