[package]
name = "ppc"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
serde = { version = "1.0.98", features = ["derive"] }
toml = "0.5.1"
snafu = "0.4.3"
glob = "0.3.0"
indicatif = "0.11.0"
runtime-fmt = "0.3.0"
console = "0.7.7"
libc = "0.2.60"
pom = {path = "../pom"}
serde_json = "1.0.40"
getrandom = "0.1.8"
xml-rs = "0.8.0"
hex = "0.3.2"
