[package]
name = "tt"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
structopt = "0.2.16"
serde = {version = "1.0.91", features = ["derive"]}
toml = "0.5.1"
snafu = {version = "0.4.1"}
glob = "0.3.0"
indicatif = "0.11.0"
runtime-fmt = "0.3.0"
console = "0.7.5"
libc = "0.2.58"
