[package]
name = "userlist"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
snafu = "0.4.4"
frontend-api = {path = "../frontend-api"}
base64 = "0.10.1"
pest = "2.1.1"
pest_derive = "2.1.0"
graphql_client = "0.8.0"
reqwest = "0.9.20"
serde = { version = "1.0.99", features = ["derive"] }
uuid = "0.7.4"
