[package]
name = "jjs_http"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
frontend-api = {path = "../frontend-api"}
rocket = "0.4.0"
rocket_codegen = "0.4.0"
handlebars = "1.1.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
uuid = { version = "0.7.2", features = ["v4"] }
failure = "0.1.5"
multipart = "0.16.1"
base64 = "0.10.1"
reqwest = "0.9.10"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "serve"]
