[package]
name = "apiserver-engine"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
pom = {path = "../pom"}
digest = "0.8.1"
db = {path = "../db"}
rand = "0.7.3"
uuid = "0.8.1"
serde = "1.0.106"
sha3 = "0.8.2"
rand_chacha = "0.2.2"
entity = {path = "../entity"}
base64 = "0.12.0"
constant_time_eq = "0.1.5"
libc = "0.2.68"
serde_json = "1.0.51"
branca = "0.9.0"
backtrace = "0.3.46"
ranker = {path = "../ranker"}
anyhow = "1.0.28"
invoker-api = {path = "../invoker-api"}
problem-loader = {path = "../problem-loader"}
serde_yaml = "0.8.11"
thiserror = "1.0.15"
schemars = "0.7.1"
tokio = { version = "0.2.18", features = ["rt-threaded", "macros", "uds", "stream", "fs"] }
futures = "0.3.4"
chrono = "0.4.11"
log = "0.4.8"
actix-web = {git = "https://github.com/mikailbag/actix-web", rev = "53abd55e1e9aad75f72df8410b77211799d166e5", features = ["openssl"]}
actix-rt = {default-features = false, version = "1.1.0"}
daemons = {path = "../daemons"}
num_cpus = "1.12.0"
anymap = "0.12.1"
tempfile = "3.1.0"
once_cell = "1.3.1"

[dev-dependencies]
toml = "0.5.6"
setup = {path = "../setup"}
simple_logger = "1.6.0"
reqwest = "0.10.4"
