[package]
name = "apiserver"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
apiserver-engine = {path = "../apiserver-engine"}
entity = {path = "../entity"}
db = {path = "../db"}
dotenv = "0.15.0"
util = {path = "../util"}
problem-loader = {path = "../problem-loader"}
anyhow = "1.0.28"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"
schemars = "0.7.1"
serde_json = "1.0.51"
tokio = { version = "0.2.18", features = ["signal"] }
futures = "0.3.4"
log = "0.4.8"
actix-rt = "1.1.0"
daemons = {path = "../daemons"}