[package]
name = "cli"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"
description = "JJS CLI client"

[dependencies]
util = {path = "../util"}
client = {path = "../client"}
pom = { path = "../pom" }
base64 = "0.12.0"
serde_json = "1.0.51"
serde = "1.0.106"
futures = { version = "0.3.4", features = ["compat"] }
tokio = { version = "0.2.18", features = ["macros", "rt-core", "io-std", "process"] }
log = "0.4.8"
anyhow = "1.0.31"
clap = "3.0.0-beta.1"
either = "1.5.3"
clap_generate = "3.0.0-beta.1"
dialoguer = "0.6.2"
xdg = "2.2.0"
serde_yaml = "0.8.13"
tar = "0.4.29"
humansize = "1.1.0"
flate2 = "1.0.16"