[package]
name = "cli"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"
description = "JJS CLI client"

[dependencies]
util = {path = "../util"}
client = {path = "../client"}
pom = { path = "../pom" }
base64 = "0.12.3"
serde_json = "1.0.57"
serde = "1.0.115"
futures = { version = "0.3.5", features = ["compat"] }
tokio = { version = "0.2.22", features = ["macros", "rt-core", "io-std", "process"] }
log = "0.4.11"
anyhow = "1.0.32"
clap = "3.0.0-beta.1"
either = "1.6.0"
clap_generate = "3.0.0-beta.1"
dialoguer = "0.6.2"
xdg = "2.2.0"
serde_yaml = "0.8.13"
tar = "0.4.30"
humansize = "1.1.0"
flate2 = "1.0.17"
