[package]
name = "cli"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"
description = "JJS CLI client"

[dependencies]
util = {path = "../util"}
client = {path = "../client"}
pom = { git = "https://github.com/jjs-dev/pps", branch = "master" }
base64 = "0.13.0"
serde_json = "1.0.59"
serde = "1.0.117"
futures = { version = "0.3.7", features = ["compat"] }
tokio = { version = "0.2.22", features = ["macros", "rt-core", "io-std", "process"] }
log = "0.4.11"
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
either = "1.6.1"
clap_generate = "3.0.0-beta.2"
dialoguer = "0.8.0"
xdg = "2.2.0"
serde_yaml = "0.8.14"
tar = "0.4.30"
humansize = "1.1.0"
flate2 = "1.0.18"
