[package]
name = "client"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
openapi = {path = "../gen-api-client"}
hyper = "0.13.4"
tokio = "0.2.18"
serde_json = "1.0.51"
http = "0.2.1"
async-trait = "0.1.35"
anyhow = "1.0.31"
serde = "1.0.114"
url = "2.1.1"
serde_yaml = "0.8.13"
xdg = "2.2.0"
tracing = "0.1.17"
tracing-futures = "0.2.4"
