[package]
name = "client"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
openapi = {path = "../gen-api-client"}
hyper = "0.13.7"
tokio = "0.2.22"
serde_json = "1.0.57"
http = "0.2.1"
async-trait = "0.1.40"
anyhow = "1.0.32"
serde = "1.0.115"
url = "2.1.1"
serde_yaml = "0.8.13"
xdg = "2.2.0"
tracing = "0.1.19"
tracing-futures = "0.2.4"
