[package]
name = "client"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
openapi = {path = "../gen-api-client"}
hyper = "0.13.8"
tokio = "0.2.22"
serde_json = "1.0.59"
http = "0.2.1"
async-trait = "0.1.41"
anyhow = "1.0.33"
serde = "1.0.117"
url = "2.1.1"
serde_yaml = "0.8.14"
xdg = "2.2.0"
tracing = "0.1.21"
tracing-futures = "0.2.4"
