[package]
name = "configure-toolchains"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
anyhow = "1.0.28"
util = {path = "../util"}
copy-ln = { git = "https://github.com/mikailbag/copy-ln", branch = "master" }
tempfile = "3.1.0"
tera = "1.2.0"
serde_yaml = "0.8.11"
nix = "0.17.0"
