[package]
name = "daemons"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
reqwest = {version = "0.10.4", features = ["blocking"]}
libsystemd = "0.1.0"
anyhow = "1.0.28"
entity = {path = "../entity"}
problem-loader = {path = "../problem-loader"}
log = "0.4.8"
url = "2.1.1"
util = {path = "../util"}
openssl = "0.10.29"
thiserror = "1.0.15"
tokio = {version = "0.2.18", features = []}
actix-web = {git = "https://github.com/mikailbag/actix-web", rev = "53abd55e1e9aad75f72df8410b77211799d166e5", features = ["openssl"]}
tokio-openssl = "0.4.0"
once_cell = "1.3.1"
