[package]
name = "db"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
r2d2 = "0.8.8"
invoker-api = {path = "../invoker-api"}
bincode = "1.2.1"
anyhow = "1.0.26"
serde_json = "1.0.44"
redis = {version = "0.15.1", default-features = false, features = []}
async-trait = "0.1.27"
futures = "0.3.4"
tokio = {version = "0.2.13", features = ["rt-threaded", "blocking"]}
chrono = {version = "0.4.11", features = ["serde"]}

[dependencies.diesel]
git = "https://github.com/diesel-rs/diesel"
rev = "8cad08f"
default-features = false
features = ["postgres", "uuid", "r2d2", "serde_json", "chrono"]