[package]
name = "db"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
r2d2 = "0.8.8"
invoker-api = {path = "../invoker-api"}
bincode = "1.2.1"
anyhow = "1.0.28"
serde_json = "1.0.51"
redis = {version = "0.15.1", default-features = false, features = []}
async-trait = "0.1.30"
futures = "0.3.4"
tokio = { version = "0.2.18", features = ["rt-threaded", "blocking"] }
chrono = { version = "0.4.11", features = ["serde"] }

[dependencies.diesel]
git = "https://github.com/diesel-rs/diesel"
rev = "537eb5d"
default-features = false
features = ["postgres", "uuid", "r2d2", "serde_json", "chrono"]
