[package]
name = "deploy"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"


[[bin]]
name = "configure"
path = "bin/configure.rs"

[[bin]]
name = "make"
path = "bin/make.rs"

[dependencies]
structopt = "0.3.5"
console = "0.9.1"
serde_json = "1.0.44"
fs_extra = "1.1.0"
tar = "0.4.26"
serde = { version = "1.0.103", features = ["derive"] }
shell-escape = "0.1.4"
tera = "0.11.20"
util = {path = "../util"}
