[package]
name = "deploy"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"


[[bin]]
name = "configure"
path = "bin/configure.rs"

[[bin]]
name = "make"
path = "bin/make.rs"

[dependencies]
structopt = "0.3.8"
console = "0.9.1"
serde_json = "1.0.45"
fs_extra = "1.1.0"
tar = "0.4.26"
serde = { version = "1.0.104", features = ["derive"] }
shell-escape = "0.1.4"
tera = "1.0.2"
util = {path = "../util"}
log = "0.4.8"
