[package]
name = "deploy"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"


[[bin]]
name = "configure"
path = "bin/configure.rs"

[[bin]]
name = "make"
path = "bin/make.rs"

[dependencies]
structopt = "0.3.13"
console = "0.10.0"
serde_json = "1.0.51"
fs_extra = "1.1.0"
tar = "0.4.26"
serde = { version = "1.0.106", features = ["derive"] }
shell-escape = "0.1.4"
tera = "1.2.0"
util = {path = "../util"}
log = "0.4.8"
anyhow = "1.0.28"
flate2 = "1.0.14"
