[package]
name = "devtool"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0.117", features = ["derive"] }
log = "0.4.11"
env_logger = "0.8.1"
ignore = "0.4.16"
toml = "0.5.7"
atty = "0.2.14"
util = {path = "../util"}
lazy_static = "1.4.0"
anyhow = "1.0.33"
serde_json = "1.0.59"
