[package]
name = "frontend-api"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
reqwest = "0.9.21"
serde = "1.0.101"
graphql_client = "0.8.0"
frontend-api-derive = {path = "../frontend-api-derive"}
serde_json = "1.0.41"
snafu = "0.5.0"

[build-dependencies]
frontend-engine = {path = "../frontend-engine"}
