[package]
name = "frontend-api"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
reqwest = "0.9.22"
serde = "1.0.103"
graphql_client = "0.8.0"
frontend-api-derive = {path = "../frontend-api-derive"}
serde_json = "1.0.42"
snafu = "0.6.0"

[build-dependencies]
frontend-engine = {path = "../frontend-engine"}
