[package]
name = "frontend-api"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
reqwest = {version = "0.10.1", features = ["blocking"]}
serde = "1.0.104"
graphql_client = "0.8.0"
frontend-api-derive = {path = "../frontend-api-derive"}
serde_json = "1.0.44"
snafu = "0.6.2"

[build-dependencies]
frontend-engine = {path = "../frontend-engine"}
